--- a/README.org
+++ b/README.org
@@ -4,7 +4,7 @@
 A solver for the [[http://cs.carleton.edu/faculty/dln/placement/problem.pdf][Carleton placement exam]].
 
 Code is separated into multiple files for readability.
-The shared code to find the quad sequences is put into the ~grid~ class in [[file:grid.py]].
+The shared code to find the quad sequences is put into the ~grid~ class in [[file:shared.py]].
 Grid is (fully) unit tested in [[file:test_grid.py]].
 
 * Usage
@@ -49,7 +49,7 @@ Grid is (fully) unit tested in [[file:test_grid.py]].
 ** Shared Grid code
 
    implementation:
-   #+include: "./grid.py" src python -n
+   #+include: "./shared.py" src python -n
 
    unit test:
    #+include: "./test_grid.py" src python -n
