--- a/README.org
+++ b/README.org
@@ -54,6 +54,9 @@ Grid is (fully) unit tested in [[file:test_grid.py]] with test file [[file:test_
    unit test:
    #+include: "./test_grid.py" src python -n
 
+   test data:
+   #+include: "./test_grid.txt" src
+
 ** First attempt
 
    uses a brute force method
